<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F1F1F1"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        layout="@layout/title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/top"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/tip_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_card"
                    android:textColor="#7C7C7C"
                    android:textSize="16dip" />

                <TextView
                    android:id="@+id/mTextCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7C7C7C"
                    android:textSize="16dip" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#D7D7D7" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_money"
                    android:textColor="#7C7C7C"
                    android:textSize="16dip" />

                <TextView
                    android:id="@+id/mTextMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7C7C7C"
                    android:textSize="16dip" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#D7D7D7" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_card_signname"
                    android:textColor="#7C7C7C"
                    android:textSize="16dip" />
                <!-- 消费都手写签名区 -->

                <LinearLayout
                    android:id="@+id/ivSignWrap"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/legend_check_sign" />

                    <TextView
                        android:id="@+id/tv_sign"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="35dip"
                        android:layout_marginLeft="26dip"
                        android:layout_marginRight="26dip"
                        android:layout_marginTop="35dip"
                        android:gravity="center"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/legend_check_sign"
                        android:textColor="#A2A2A2"
                        android:textSize="35dip" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#D7D7D7" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/legend_agree_sign"
                android:textColor="#A2A2A2"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/mTextTradeTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:textColor="#A2A2A2"
                android:textSize="10dip" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            style="@style/buttonstyle_avg"
            android:id="@+id/ok_btn"
            android:layout_weight="1"
            android:text="@string/btnConfirm" />

        <Button
            style="@style/buttonstyle_avg_grey"
            android:id="@+id/cancel_btn"
            android:layout_weight="1"
            android:text="@string/btnCancel"/>
    </LinearLayout>

</RelativeLayout>